--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
+    "sass": "^1.94.2",
     "vite": "^7.1.7",
     "vite-plugin-pwa": "^1.1.0"
   }
