--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "printWidth": 80,
   "semi": false,
   "singleQuote": true,
+  "plugins": ["prettier-plugin-css-order"],
   "tabWidth": 2,
   "trailingComma": "es5"
 }
