--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "clean-reacti-vite",
+  "name": "beyond-bingo",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,8 +27,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "sass": "^1.94.2",
+    "stylelint": "^16.26.1",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard-scss": "^16.0.0",
+    "stylelint-order": "^7.0.0",
     "vite": "^7.1.7",
     "vite-plugin-pwa": "^1.1.0"
   }
